FIXED: An issue where a horizontal scrollbar would appear in the block settings sidebar on heading and paragraph blocks
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@37787 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/components/controls/text-controls/_style.scss
+++ b/src/components/controls/text-controls/_style.scss
@@ -50,6 +50,13 @@
   > * {
     width: calc(50% - .5rem);
   }
+
+  .block-editor-text-decoration-control__buttons,
+  .block-editor-text-transform-control__buttons {
+    button.has-icon {
+      margin-right: 0;
+    }
+  }
 }
 
 // TODO: Temporarily hide the label on Gutenberg's FontSizePicker
